@@ -78,6 +78,8 @@ module Fairy
     def_prop :PREQUEUING_POLICY
     def_prop :POSTQUEUING_POLICY
 
+    def_prop :POSTMAPPING_POLICY
+
     def_prop :POSTQUEUE_MAX_TRANSFER_SIZE
     def_prop :POOLQUEUE_POOL_THRESHOLD
     def_prop :ONMEMORY_SIZEDQUEUE_SIZE
@@ -89,6 +91,8 @@ module Fairy
 
     def_prop :N_MOD_GROUP_BY
     def_prop :HASH_MODULE
+    def_prop :HASH_OPTIMIZE
+
     def_prop :MOD_GROUP_BY_BUFFERING_POLICY
     def_prop :MOD_GROUP_BY_CMSB_THRESHOLD
 
@@ -201,6 +205,8 @@ module Fairy
 
   CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
+  CONF.POSTMAPPING_POLICY = nil
+
   CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 
@@ -215,6 +221,8 @@ module Fairy
 
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "fairy/share/hash-md5"
+  CONF.HASH_OPTIMIZE = false
+
   CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
   CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
