@@ -60,6 +60,9 @@ module Fairy
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
+##CONF.HASH_OPTIMIZE = false
+CONF.HASH_OPTIMIZE = true
+
 ##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
 #CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
@@ -100,9 +103,9 @@ module Fairy
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
-CONF.DEBUG_MONITOR_ON = true
+#CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
 ##CONF.DEBUG_BUG49 = false
 #CONF.DEBUG_BUG49 = true
