@@ -1,3 +1,9 @@
+Thu Jul  9 14:55:23 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-file-output.rb, bjob.rb, controller.rb, n-splitter.rb: debugコ
+	  メントをはずした
+	* n-group-by.rb, n-mod-group-by.rb, conf.rb: CONF.HASH_OPTIMIZE対応
+
 Wed Jul  8 18:30:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* controller.rb, n-group-by.rb, n-mod-group-by.rb: [SR#102] mod_group_by対応
